--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>About Us</h2>
+            <h2>О платформе</h2>
         </div>
 
         <div class="row">
@@ -10,20 +10,23 @@
                 <img src="~/img/about-img.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                <h3>
+                     Образовательно-практическую платформа объединения молодых специалистов менторов
+                </h3>
                 <p class="fst-italic">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                    magna aliqua.
+                    Наша цель – помочь молодым специалистам получить первый коммерческий опыт, 
+                    а бизнесам – найти IT-решения для улучшения работы своего бизнеса за умеренную плату.
                 </p>
                 <ul>
-                    <li><i class="bi bi-check2-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                    <li><i class="bi bi-check2-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                    <li><i class="bi bi-check2-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                    <li><i class="bi bi-check2-circle"></i> Стажировка на реальных проектах <strong>для молодых специалистов</strong></li>
+                    <li><i class="bi bi-check2-circle"></i> Возможность проявить себя для <strong>менторов</strong></li>
+                    <li><i class="bi bi-check2-circle"></i> доступные ІТ-решения для малого и среднего бизнеса</li>
                 </ul>
                 <p>
-                    Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                    culpa qui officia deserunt mollit anim id est laborum
+                    Каждый проект на нашей платформе ведут опытные менторы со своей командой, что гарантирует качественный продукт на выходе для бизнеса и возможность молодым специалистам перенять знания ментора на реальном проекте.
+                </p>
+                <p>
+                    Мы уверены, что образование и практический опыт – ключевые факторы для личностного и профессионального роста. Поэтому мы создали эту платформу, чтобы помочь молодым специалистам получить первый опыт работы в IT-сфере и развиваться вместе с нами.
                 </p>
             </div>
         </div>
