Add Team member

--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -304,7 +304,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Our Team</h2>
+            <h2>Наши менторы</h2>
             <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -328,17 +328,18 @@
 
             <div class="col-lg-4 col-md-6">
                 <div class="member">
-                    <img src="~/img/team/team-2.jpg" alt="">
-                    <h4>Sarah Jhinson</h4>
-                    <span>Product Manager</span>
+                    <img src="~/img/team/vp-v1.jpg" alt="">
+                    <h4>Вадим Папко</h4>
+                    <span>Architect | Chief .NET Technologist @@SaM Solutions</span>
                     <p>
-                        Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
+                        Больше 10 лет в IT индустрии. Опыт в разработке и проектировании Web, Cloud решений. 
+                        Спикер, Ментор, Тренер.
                     </p>
                     <div class="social">
-                        <a href=""><i class="bi bi-twitter"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
+                        <a href="https://twitter.com/VadzimPapko"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/vadzim-papko/"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
             </div>
