--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <ul>
                     <li><i class="bi bi-check2-circle"></i> Стажировка на реальных проектах <strong>для молодых специалистов</strong></li>
                     <li><i class="bi bi-check2-circle"></i> Возможность проявить себя для <strong>менторов</strong></li>
-                    <li><i class="bi bi-check2-circle"></i> доступные ІТ-решения для малого и среднего бизнеса</li>
+                    <li><i class="bi bi-check2-circle"></i> доступные <strong>ІТ-решения</strong> для малого и среднего бизнеса</li>
                 </ul>
                 <p>
                     Каждый проект на нашей платформе ведут опытные менторы со своей командой, что гарантирует качественный продукт на выходе для бизнеса и возможность молодым специалистам перенять знания ментора на реальном проекте.
@@ -38,40 +38,39 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Services</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <h2>Мы предлогаем</h2>
+            <p>
+                Реальный опыт стажорам, возможность быть учителем опытным специалистам и разработку ИТ-проектов для бизнеса.
+            </p>
         </div>
 
         <div class="row">
             <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-cpu"></i></div>
-                <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+                <div class="icon"><i class="bi bi-cash-coin"></i></div>
+                <h4 class="title"><a href="">Бизнесу</a></h4>
+                <p class="description">
+                    У тебя есть идея в сфере IT и необходима помощь в ее реализации либо тебе необходимо улучшить уже работающее решение за умеренную плату.
+                    Ты готов доверить реализацию идеи нашим стажерам, которые будут ее с увлечением реализовывать под чутким руководством опытных менторов. 
+                    Оставляй заявку и мы свяжемся с тобой, чтобы найти наилучшее решение!
+                </p>
             </div>
             <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-clipboard-data"></i></div>
-                <h4 class="title"><a href="">Dolor Sitema</a></h4>
-                <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+                <div class="icon"><i class="bi bi-person-vcard"></i></div>
+                <h4 class="title"><a href="">Стажорам</a></h4>
+                <p class="description">
+                    Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами, 
+                    получить опыт от опытных менторов, и стать частью сообщества, которое стремится к развитию и успеху. 
+                    Мы готовы помочь вам расти и развиваться вместе с нами!
+                </p>
             </div>
             <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-globe"></i></div>
-                <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-            <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-images"></i></div>
-                <h4 class="title"><a href="">Magni Dolores</a></h4>
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-            <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-sliders"></i></div>
-                <h4 class="title"><a href="">Nemo Enim</a></h4>
-                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-            </div>
-            <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-building"></i></div>
-                <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-                <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+                <div class="icon"><i class="bi bi-mortarboard"></i></div>
+                <h4 class="title"><a href="">Менторам</a></h4>
+                <p class="description">
+                    Как ментор, вы будете работать с командой молодых специалистов, помогая им развиваться и расти в IT-сфере. 
+                    Вы сможете поделиться своим опытом и знаниями на практике, работая над реальными проектами. 
+                    Это также может быть отличной возможностью для вас расширить свой кругозор и узнать о новых технологиях и подходах.
+                </p>
             </div>
         </div>
 
