Added some text

--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -79,9 +79,9 @@
     <div class="container">
 
         <div class="text-center">
-            <h3>Call To Action</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="cta-btn" href="#">Call To Action</a>
+            <h3>Хочешь Присоединиться к Нашей Команде?</h3>
+            <p>Мы будем рады, если именно Вы присоединитесь к нашей команде профессионалов и стажеров, чтобы вместе развиваться, обмениваться опытом и делать наш миру чуточку лучше. Пожалуйста, перейдите к нашему опросу и заполните его. После завершения, мы свяжемся с Вами в ближайшее время.</p>
+            <a class="cta-btn" href="https://docs.google.com/forms/d/e/1FAIpQLSfIT4XsjYedq2spE_IE7LyN8u7MiOzz3j57ctqZcOEJ_uhYGg/viewform?usp=sf_link">Присоединиться</a>
         </div>
 
     </div>
@@ -91,7 +91,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Our Portfolio</h2>
+            <h2>Our Interns Projects</h2>
         </div>
 
         <div class="row">
@@ -233,61 +233,43 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Frequently Asked Questions</h2>
+            <h2>Наиболее Часто Задаваемые Вопросы</h2>
         </div>
 
         <ul class="faq-list">
 
             <li>
-                <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Non consectetur a erat nam at lectus urna duis? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">Какую главную проблему решает наш Startup?<i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq1" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                        Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                        В настоящее время, трудно найти работу молодым и амбициозным специалистам, прошедшим переподготовку и закончившим курсы, так как у них банально нет опыта и работодатели не рассматривают таких кандидатов. Наша главная цель - подготовить и продать кандидатов в стартапы и компании, дать им всю необходимую информацию для старта карьеры и помочь им найти то самое место для начала своей карьеры в IT.
                     </p>
                 </div>
             </li>
 
             <li>
-                <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-                <div id="faq2" class="collapse" data-bs-parent=".faq-list">
-                    <p>
-                        Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                    </p>
-                </div>
-            </li>
-
-            <li>
-                <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">В чём уникальность нашего Startup проекта? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                        Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                        Наша лаборатория объединяет такие состовляющие, как - стажировка, обучение, исполнение заказов. Мы готовы делиться статистикой с массами - сколько кандидатов пришло, сколько из них трудоустроилось. Мы готовы будем обеспечить контроль качества реализуемых в рамках нашей лаборатории проектов.
                     </p>
                 </div>
             </li>
 
             <li>
-                <div data-bs-toggle="collapse" href="#faq4" class="collapsed question">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-                <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+                <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Что мы готовы предоставить нашим кандидатам и менторам? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                        Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                        Мы готовы развивать профессиональные навыки кандидата, предоставить опыт работы на реальных проектах с разным технологическим стеком, а также в конечном итоге трудоустроить нашего кандидата в компанию или мелкий Startup. Менторы же могут попробовать себя в роли Тимлида, руководя небольшой командой разработчиков, а также развивать свои навыки публичных выступлений и получать новые знания от других менторов.
                     </p>
                 </div>
             </li>
 
             <li>
-                <div data-bs-toggle="collapse" href="#faq5" class="collapsed question">Tempus quam pellentesque nec nam aliquam sem et tortor consequat? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-                <div id="faq5" class="collapse" data-bs-parent=".faq-list">
-                    <p>
-                        Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
-                    </p>
-                </div>
-            </li>
-
-            <li>
-                <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Tortor vitae purus faucibus ornare. Varius vel pharetra vel turpis nunc eget lorem dolor? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+                <div data-bs-toggle="collapse" href="#faq6" class="collapsed question">Чем мы можем быть полезны мелкому и среднему бизнесу? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                     <p>
-                        Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                        Мы готовы предоставить свои ресурсы и разработать кейс под ещё нереализованные проекты, заказчики которых не располагают большим количеством ресурсов и средств.
                     </p>
                 </div>
             </li>
