--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
 
             <div class="logo me-auto">
                 <h1>
+                    <img src="~/img/expertschool.png" class="img-fluid" alt="">
                     <a href="index.html">ExpertSchool</a>
                 </h1>
             </div>
