--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
         <div class="section-title">
             <h2>Мы предлогаем</h2>
             <p>
-                Реальный опыт стажорам, возможность быть учителем опытным специалистам и разработку ИТ-проектов для бизнеса.
+                Реальный опыт стажёрам, возможность быть учителем опытным специалистам и разработку ИТ-проектов для бизнеса.
             </p>
         </div>
 
@@ -56,7 +56,7 @@
             </div>
             <div class="col-lg-4 col-md-6 icon-box">
                 <div class="icon"><i class="bi bi-person-vcard"></i></div>
-                <h4 class="title"><a href="">Стажорам</a></h4>
+                <h4 class="title"><a href="">Стажёрам</a></h4>
                 <p class="description">
                     Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами, 
                     получить опыт от опытных менторов, и стать частью сообщества, которое стремится к развитию и успеху. 
@@ -359,7 +359,7 @@
 
             <div class="col-lg-4 col-md-6">
                 <div class="contact-about">
-                    <h3>Amoeba</h3>
+                    <h3>ExpertSchool</h3>
                     <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
                     <div class="social-links">
                         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
