--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -66,9 +66,14 @@
     </header><!-- End #header -->
     <section id="hero">
         <div class="hero-container">
-            <h1>Welcome to Amoeba</h1>
-            <h2>We are team of talented designers making websites with Bootstrap</h2>
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+<div class="container">
+            <div style="color:white">
+              <p class="lead">Добро пожаловать на нашу образовательно-практическую платформу, созданную командой специалистов различных сфер на хакатоне в июне 2023 года! Мы стремимся разработать современные решения проблем в образовательной сфере и помочь молодым специалистам получить первый коммерческий опыт.</p>
+<p class="lead">На нашей платформе вы найдете возможность объединиться с небольшими бизнесами, которые ищут IT-решения для улучшения своей работы. Мы предлагаем умеренную плату за наши услуги, чтобы сделать их доступными для всех.</p>
+<p class="lead">Мы верим, что образование является важной частью жизни любого человека, которое позволяет нам двигаться вперед и становиться лучше. Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами и развиваться вместе с нами!</p>
+            </div>
+            <a href="#about" class="btn-get-started scrollto">Далее</a>
+    </div>
         </div>
     </section><!-- #hero -->
     <div>
@@ -80,14 +85,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>Amoeba</span></strong>. All Rights Reserved
-            </div>
-            <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-one-page-bootstrap-template-amoeba/ -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                &copy; Copyright <strong><span>ExpertSchool</span></strong>. All Rights Reserved
             </div>
         </div>
     </footer><!-- End #footer -->
