--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -292,17 +292,17 @@
         <div class="row gy-4">
             <div class="col-lg-4 col-md-6">
                 <div class="member">
-                    <img src="~/img/team/team-1.jpg" alt="">
-                    <h4>Walter White</h4>
-                    <span>Chief Executive Officer</span>
+                    <img src="~/img/team/ales.jpg" alt="">
+                    <h4>Алесь Крот</h4>
+                    <span>iOS developer @@SoftTeco</span>
                     <p>
-                        Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                        Больше года работает в сфере проектирования мобильных приложений и IT-решений.
                     </p>
                     <div class="social">
-                        <a href=""><i class="bi bi-twitter"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
+                        <a href="https://twitter.com/aleskrot"><i class="bi bi-twitter"></i></a>
+                        <a href="https://www.facebook.com/ales.krot/"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/aleskrot/"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -327,17 +327,17 @@
 
             <div class="col-lg-4 col-md-6">
                 <div class="member">
-                    <img src="~/img/team/team-3.jpg" alt="">
-                    <h4>William Anderson</h4>
-                    <span>CTO</span>
+                    <img src="~/img/team/glebyshka.jpg" alt="">
+                    <h4>Глеб Сукристик</h4>
+                    <span>Студент БГУиР | .NET Software Engeneer @@SaM Solutions</span>
                     <p>
-                        Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                        Опыт в разработке и проектировании приложений на C# и DevOps Engineering.
                     </p>
                     <div class="social">
-                        <a href=""><i class="bi bi-twitter"></i></a>
-                        <a href=""><i class="bi bi-facebook"></i></a>
-                        <a href=""><i class="bi bi-instagram"></i></a>
-                        <a href=""><i class="bi bi-linkedin"></i></a>
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/glebyshka/"><i class="bi bi-linkedin"></i></a>
                     </div>
                 </div>
             </div>
