update the homepage hero block and services

--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -46,15 +46,6 @@
 
         <div class="row">
             <div class="col-lg-4 col-md-6 icon-box">
-                <div class="icon"><i class="bi bi-cash-coin"></i></div>
-                <h4 class="title"><a href="">Бизнесу</a></h4>
-                <p class="description">
-                    У тебя есть идея в сфере IT и необходима помощь в ее реализации либо тебе необходимо улучшить уже работающее решение за умеренную плату.
-                    Ты готов доверить реализацию идеи нашим стажерам, которые будут ее с увлечением реализовывать под чутким руководством опытных менторов. 
-                    Оставляй заявку и мы свяжемся с тобой, чтобы найти наилучшее решение!
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-6 icon-box">
                 <div class="icon"><i class="bi bi-person-vcard"></i></div>
                 <h4 class="title"><a href="">Стажёрам</a></h4>
                 <p class="description">
@@ -70,6 +61,15 @@
                     Как ментор, вы будете работать с командой молодых специалистов, помогая им развиваться и расти в IT-сфере. 
                     Вы сможете поделиться своим опытом и знаниями на практике, работая над реальными проектами. 
                     Это также может быть отличной возможностью для вас расширить свой кругозор и узнать о новых технологиях и подходах.
+                </p>
+            </div>
+            <div class="col-lg-4 col-md-6 icon-box">
+                <div class="icon"><i class="bi bi-cash-coin"></i></div>
+                <h4 class="title"><a href="">Бизнесу</a></h4>
+                <p class="description">
+                    У тебя есть идея в сфере IT и необходима помощь в ее реализации либо тебе необходимо улучшить уже работающее решение за умеренную плату.
+                    Ты готов доверить реализацию идеи нашим стажерам, которые будут ее с увлечением реализовывать под чутким руководством опытных менторов. 
+                    Оставляй заявку и мы свяжемся с тобой, чтобы найти наилучшее решение!
                 </p>
             </div>
         </div>
@@ -93,16 +93,16 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Our Interns Projects</h2>
+            <h2>Проекты наших интернов</h2>
         </div>
 
         <div class="row">
             <div class="col-lg-12">
                 <ul id="portfolio-flters">
-                    <li data-filter="*" class="filter-active">All</li>
-                    <li data-filter=".filter-app">App</li>
-                    <li data-filter=".filter-card">Card</li>
-                    <li data-filter=".filter-web">Web</li>
+                    <li data-filter="*" class="filter-active">Все</li>
+                    <li data-filter=".filter-app">Html/Css</li>
+                    <li data-filter=".filter-card">C#/.Net</li>
+                    <li data-filter=".filter-web">PHP</li>
                 </ul>
             </div>
         </div>
