--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -1,17 +1,17 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru_BY">
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Expert School</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
+    <title>Стажировка с Expert School</title>
+    <meta content="Образовательно-практическую платформа для объединения стажёров, менторов и бизнеса" name="description">
+     <meta content="образование, практика, бизнес, IT-решения, коммерческий опыт, стажировка" name="keywords">
 
     <link href="~/img/expertschool.png" rel="icon">
     <link href="~/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Lato:400,300,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,700i|Lato:400,300,700,900&subset=cyrillic" rel="stylesheet">
 
     <link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="~/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -27,7 +27,7 @@
             <div class="logo me-auto">
                 <h1>
                     <img src="~/img/expertschool.png" class="img-fluid" alt="">
-                    <a href="index.html">ExpertSchool</a>
+                    <a href="/">ExpertSchool</a>
                 </h1>
             </div>
 
@@ -66,14 +66,20 @@
     </header><!-- End #header -->
     <section id="hero">
         <div class="hero-container">
-<div class="container">
-            <div style="color:white">
-              <p class="lead">Добро пожаловать на нашу образовательно-практическую платформу, созданную командой специалистов различных сфер на хакатоне в июне 2023 года! Мы стремимся разработать современные решения проблем в образовательной сфере и помочь молодым специалистам получить первый коммерческий опыт.</p>
-<p class="lead">На нашей платформе вы найдете возможность объединиться с небольшими бизнесами, которые ищут IT-решения для улучшения своей работы. Мы предлагаем умеренную плату за наши услуги, чтобы сделать их доступными для всех.</p>
-<p class="lead">Мы верим, что образование является важной частью жизни любого человека, которое позволяет нам двигаться вперед и становиться лучше. Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами и развиваться вместе с нами!</p>
+            <div class="container" style="color:white;">
+                <h1>Добро пожаловать в ExpertSchool!</h1>
+                <div class="row">
+                    <div class="col-md-6 offset-md-3">
+                        <p class="text-center lead">Лови возможность:</p>
+                        <ul class="text-left">
+                            <li>приобрести опыт участия на реальных проектах;</li>
+                            <li>работать над интересными проектами и развиваться вместе с нами;</li>
+                            <li>найти решение для твоих бизнес потребностей (IT решения) за умеренную плату</li>
+                        </ul>
+                        <a href="#about" class="btn-get-started scrollto">Далее</a>
+                    </div>
+                </div>
             </div>
-            <a href="#about" class="btn-get-started scrollto">Далее</a>
-    </div>
         </div>
     </section><!-- #hero -->
     <div>
