translate meno  from En to Ru

--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -33,12 +33,13 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                    <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
-                    <li class="dropdown">
+                    <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
+                    <li><a class="nav-link scrollto" href="#about">Про нас</a></li>
+                    <li><a class="nav-link scrollto" href="#services">Преимущества</a></li>
+                    <li><a class="nav-link scrollto" href="#portfolio">Проекты интернов</a></li>
+                    <li><a class="nav-link scrollto" href="#team">Команда</a></li>
+
+                    <li class="dropdown" hidden style="display:none">
                         <a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
                             <li><a href="#">Drop Down 1</a></li>
@@ -57,7 +58,8 @@
                             <li><a href="#">Drop Down 4</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#contact">Contact Us</a></li>
+
+                    <li><a class="nav-link scrollto" href="#contact">Контакты</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -71,7 +73,7 @@
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <p class="text-center lead">Лови возможность:</p>
-                        <ul class="text-left">
+                        <ul class="text-left" style="list-style:none;">
                             <li>приобрести опыт участия на реальных проектах;</li>
                             <li>работать над интересными проектами и развиваться вместе с нами;</li>
                             <li>найти решение для твоих бизнес потребностей (IT решения) за умеренную плату</li>
@@ -91,7 +93,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>ExpertSchool</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>ExpertSchool</span></strong>. Все права защищены.
             </div>
         </div>
     </footer><!-- End #footer -->
