--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -351,8 +351,10 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Contact Us</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <h2>Наши контакты</h2>
+            <p>
+                Мы верим, что образование является важной частью жизни любого человека, которое позволяет нам двигаться вперед и становиться лучше. Присоединяйтесь к нашей платформе, чтобы получить возможность работать над интересными проектами и развиваться вместе с нами!
+            </p>
         </div>
 
         <div class="row">
@@ -360,7 +362,9 @@
             <div class="col-lg-4 col-md-6">
                 <div class="contact-about">
                     <h3>ExpertSchool</h3>
-                    <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+                    <p>
+                        В социальных сетях мы обновляем информацию о наших проектах, стажёрах и студентах.
+                    </p>
                     <div class="social-links">
                         <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
