--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Мы предлогаем</h2>
+            <h2>Мы предлагаем</h2>
             <p>
                 Реальный опыт стажёрам, возможность быть учителем опытным специалистам и разработку ИТ-проектов для бизнеса.
             </p>
@@ -100,9 +100,9 @@
             <div class="col-lg-12">
                 <ul id="portfolio-flters">
                     <li data-filter="*" class="filter-active">Все</li>
-                    <li data-filter=".filter-app">Html/Css</li>
-                    <li data-filter=".filter-card">C#/.Net</li>
-                    <li data-filter=".filter-web">PHP</li>
+                    <li data-filter=".filter-app">Спорт/Здоровье</li>
+                    <li data-filter=".filter-card">Архитектура/Недвижимость</li>
+                    <li data-filter=".filter-web">Online-бизнес</li>
                 </ul>
             </div>
         </div>
@@ -126,10 +126,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3">Web 3</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Сайт-визитка для спортивного клуба</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="~/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -139,10 +139,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2">App 2</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="">Сайт о продукции компании</a></h3>
                         <div>
-                            <a href="~/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="~/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bi bi-plus"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -152,10 +152,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2">Card 2</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2">Китайский культурный центр</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -165,10 +165,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2">Web 2</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2">Интернет-магазин</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -178,10 +178,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3">App 3</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3">Сайт чемпионата</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -191,10 +191,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1">Card 1</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1">Продажа ворот</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -204,10 +204,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3">Card 3</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3">Архитектурное бюро</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -217,10 +217,10 @@
                 <div class="portfolio-wrap">
                     <img src="~/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                     <div class="portfolio-info">
-                        <h3><a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1">Web 1</a></h3>
+                        <h3><a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1">Агрегатор клубов</a></h3>
                         <div>
                             <a href="~/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bi bi-plus"></i></a>
-                            <a href="portfolio-details.html" title="Details"><i class="bi bi-link"></i></a>
+                            <a href="portfolio-details.html" title="Подробнее"><i class="bi bi-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -286,7 +286,10 @@
 
         <div class="section-title">
             <h2>Наши менторы</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>
+                Приглашаем опытных специалистов IT-сферы присоединиться к нашей платформе в качестве менторов. 
+                Если вы имеете опыт в создании IT-продуктов и готовы поделиться своими знаниями и опытом с молодыми специалистами, мы будем рады видеть вас в нашей команде.
+            </p>
         </div>
 
         <div class="row gy-4">
