--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -69,11 +69,11 @@
     <section id="hero">
         <div class="hero-container">
             <div class="container" style="color:white;">
-                <h1>Добро пожаловать в ExpertSchool!</h1>
+                <h2>Добро пожаловать в ExpertSchool!</h2>
                 <div class="row">
                     <div class="col-md-6 offset-md-3">
                         <p class="text-center lead">Лови возможность:</p>
-                        <ul class="text-left" style="list-style:none;">
+                        <ul style="text-align: left;">
                             <li>приобрести опыт участия на реальных проектах;</li>
                             <li>работать над интересными проектами и развиваться вместе с нами;</li>
                             <li>найти решение для твоих бизнес потребностей (IT решения) за умеренную плату</li>
