--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>О платформе</h2>
+            <h2>О нас</h2>
         </div>
 
         <div class="row">
@@ -10,24 +10,15 @@
                 <img src="~/img/about-img.jpg" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-                <h3>
-                     Образовательно-практическую платформа объединения молодых специалистов менторов
-                </h3>
                 <p class="fst-italic">
-                    Наша цель – помочь молодым специалистам получить первый коммерческий опыт, 
-                    а бизнесам – найти IT-решения для улучшения работы своего бизнеса за умеренную плату.
+                    Наша цель – помочь специалистам получить первый коммерческий опыт, 
+                    а бизнесам – реализовать IT-решения за умеренную плату.
                 </p>
                 <ul>
-                    <li><i class="bi bi-check2-circle"></i> Стажировка на реальных проектах <strong>для молодых специалистов</strong></li>
+                    <li><i class="bi bi-check2-circle"></i> Приобретение опыта на реальных проектах <strong>для специалистов без опыта</strong></li>
                     <li><i class="bi bi-check2-circle"></i> Возможность проявить себя для <strong>менторов</strong></li>
                     <li><i class="bi bi-check2-circle"></i> доступные <strong>ІТ-решения</strong> для малого и среднего бизнеса</li>
                 </ul>
-                <p>
-                    Каждый проект на нашей платформе ведут опытные менторы со своей командой, что гарантирует качественный продукт на выходе для бизнеса и возможность молодым специалистам перенять знания ментора на реальном проекте.
-                </p>
-                <p>
-                    Мы уверены, что образование и практический опыт – ключевые факторы для личностного и профессионального роста. Поэтому мы создали эту платформу, чтобы помочь молодым специалистам получить первый опыт работы в IT-сфере и развиваться вместе с нами.
-                </p>
             </div>
         </div>
 
@@ -93,7 +84,7 @@
     <div class="container">
 
         <div class="section-title">
-            <h2>Проекты наших интернов</h2>
+            <h2>Проекты наших стажёров</h2>
         </div>
 
         <div class="row">
