--- a/ExpertSchool/Views/Shared/_Layout.cshtml
+++ b/ExpertSchool/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
                     <li><a class="nav-link scrollto" href="#about">Про нас</a></li>
                     <li><a class="nav-link scrollto" href="#services">Преимущества</a></li>
-                    <li><a class="nav-link scrollto" href="#portfolio">Проекты интернов</a></li>
+                    <li><a class="nav-link scrollto" href="#portfolio">Проекты стажеров</a></li>
                     <li><a class="nav-link scrollto" href="#team">Команда</a></li>
 
                     <li class="dropdown" hidden style="display:none">
