--- a/ExpertSchool/Views/Home/Index.cshtml
+++ b/ExpertSchool/Views/Home/Index.cshtml
@@ -381,17 +381,17 @@
                 <div class="info">
                     <div>
                         <i class="bi bi-geo-alt"></i>
-                        <p>A108 Adam Street<br>New York, NY 535022</p>
+                        <p>Я. Коласа 73/3<br>Минск, Беларусь</p>
                     </div>
 
                     <div>
                         <i class="bi bi-envelope"></i>
-                        <p>info@example.com</p>
+                        <p>expertshool@gmail.com</p>
                     </div>
 
                     <div>
                         <i class="bi bi-phone"></i>
-                        <p>+1 5589 55488 55s</p>
+                        <p>+375 (29) 117-22-22</p>
                     </div>
 
                 </div>
@@ -400,10 +400,10 @@
             <div class="col-lg-5 col-md-12">
                 <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                     <div class="form-group">
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                        <input type="text" name="name" class="form-control" id="name" placeholder="Name" required>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
                     </div>
                     <div class="form-group mt-3">
                         <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
@@ -416,7 +416,7 @@
                         <div class="error-message"></div>
                         <div class="sent-message">Your message has been sent. Thank you!</div>
                     </div>
-                    <div class="text-center"><button type="submit">Send Message</button></div>
+                    <div class="text-center"><button type="submit">Отправить</button></div>
                 </form>
             </div>
 
@@ -426,5 +426,5 @@
 </section><!-- End Contact Us Section -->
 <!-- ======= Map Section ======= -->
 <section class="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.2219901290355!2d-74.00369368400567!3d40.71312937933185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a23e28c1191%3A0x49f75d3281df052a!2s150%20Park%20Row%2C%20New%20York%2C%20NY%2010007%2C%20USA!5e0!3m2!1sen!2sbg!4v1579767901424!5m2!1sen!2sbg" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=%D0%9C%D0%B8%D0%BD%D1%81%D0%BA,%20%D0%AF.%20%D0%9A%D0%BE%D0%BB%D0%B0%D1%81%D0%B0%2073/3+(ExpertSchool)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div>
 </section><!-- End Map Section -->
